--- a/locale/da/LC_MESSAGES/messages.po
+++ b/locale/da/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-08 16:08+0000\n"
-"PO-Revision-Date: 2015-03-20 00:10+0000\n"
+"PO-Revision-Date: 2015-04-08 20:43+0000\n"
 "Last-Translator: Jørgen   <joergenr@stofanet.dk>\n"
 "Language-Team: MozillaDanmark\n"
 "Language: da\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1426810253.0\n"
+"X-POOTLE-MTIME: 1428525838.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18 public/js/views/payment-failed.js:19
 msgid "Payment cancelled."
@@ -363,7 +363,7 @@ msgstr "Pinkoden er for kort"
 
 #: public/js/lib/utils.js:191
 msgid "Success"
-msgstr "Succes "
+msgstr "Succes"
 
 #: public/js/lib/utils.js:192
 msgid "Your purchase is complete. Close the window to continue"
@@ -379,4 +379,4 @@ msgstr "Fuldfører betaling"
 
 #: public/js/error-codes.js:12 public/js/error-codes.js:17 public/js/error-codes.js:18 public/js/error-codes.js:34 public/js/error-codes.js:13 public/js/error-codes.js:19 public/js/error-codes.js:35
 msgid "Product cannot be purchased due to configuration error."
-msgstr ""
+msgstr "Produktet kan ikke købes på grund af en konfigurationsfejl."
